# bdfingerd

./: INSTALL  Makefile.in  README  TODO  bdfddate.c  bdfddate.sh  bdfingerd.conf  child.c  conf.c  config.h.in  configure  configure.in  format.c  lastlog.c  mail.c  main.c  paragraph.c  signals.c  sock.c  userinfo.c  utmp.c
doc/: README  bdfingerd.conf-typical
inc/: bdfinger.h  detect.h
